--- a/frontend/src/pages/Category/Category.css
+++ b/frontend/src/pages/Category/Category.css
@@ -78,6 +78,31 @@
     margin: 160px;
 }
 
+.category{
+    display: flex;
+    flex-direction: column;
+    width: 280px;
+    align-items: center;
+    justify-content: center;
+}
+.category img {
+    height: 130px;
+    width: 130px;
+    border-radius: 50%;
+    border: 4px solid green;
+}
+.categories{
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 20px;
+}
+.updateCatImg{
+    height: 100px;
+    width: 100px;
+}
+.modal_cat_update{
+    height: 300px;
+}
 @media (max-width: 700px) {
     .faq_top {
         display: flex;
