--- a/frontend/src/components/Sidebar/Sidebar.css
+++ b/frontend/src/components/Sidebar/Sidebar.css
@@ -15,13 +15,13 @@
     align-items: center;
     justify-content: center;
     background-color:  #2f7056!important;
-    border-bottom: 1px solid black;
+    /* border-bottom: 1px solid black; */
 }
 
 .logo {
     padding-top: 10px;
-    width: 180px;
-    height: 40px;
+    width: 150px;
+    height: 100px;
 }
 
 .center {
