--- a/frontend/src/pages/Category/Category.css
+++ b/frontend/src/pages/Category/Category.css
@@ -66,7 +66,7 @@
     width: 400px
 }
 .modal_cat{
-    height: 200px;
+    height: fit-content;
 }
 .accordion {
     width: 600px;
@@ -101,7 +101,7 @@
     width: 100px;
 }
 .modal_cat_update{
-    height: 300px;
+    height: fit-content;
 }
 @media (max-width: 700px) {
     .faq_top {
