--- a/frontend/src/pages/Category/Category.css
+++ b/frontend/src/pages/Category/Category.css
@@ -103,6 +103,9 @@
 .modal_cat_update{
     height: fit-content;
 }
+.file{
+    width: 400px;
+}
 @media (max-width: 700px) {
     .faq_top {
         display: flex;
@@ -113,14 +116,16 @@
         padding-left: 0px;
         padding-top: 20px;
     }
-
+    .category{
+        width: 195px;
+    }
     .modal_main {
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        width: 300px;
-        height: 300px;
+        width: 290px;
+        height: fit-content;
         background-color: white;
         border: none;
         border-radius: 6px;
@@ -147,6 +152,9 @@
     .faq_form {
         margin: 20px;
         margin-top: 100px;
+    }
+    .file{
+        width: 350px;
     }
 
 }
